gobmkida/c0/show_dragons
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/show_dragons/src/engine/dragon.c:1940:1: error: use of undeclared identifier 'show_dragons_snames'
show_dragons_snames[dd->crude_status], 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/show_dragons/src/engine/dragon.c:1941:1: error: use of undeclared identifier 'show_dragons_snames'
show_dragons_snames[dd->status], 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/show_dragons/src/engine/dragon.c:1946:31: error: use of undeclared identifier 'show_dragons_snames'
gprintf( ", owl status %s\n", show_dragons_snames[dd->owl_status]); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/show_dragons/src/obj/1/dragon.o] Error 1
